new version with Material

--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,5 +1,18 @@
-<footer class="bg-light text-center text-lg-start">
-    <div class="text-center p-3">
-    Copyright © 2024 DSS. All Rights Reserved
-    </div>
-  </footer>
+<footer class="footer">
+  <div class="d-sm-flex justify-content-center justify-content-sm-between">
+    <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">
+      Copyright © {{ defaultYear }} by
+      <a href="https://www.google.com/" target="_blank">
+        <strong>Bytmasoft information system</strong>
+      </a>
+      All rights reserved. made with <i class="ti-heart text-danger ml-1"></i
+      ><br />
+      D 69469 Weinheim Konrad-Adenauerstr. 9.
+      <strong>
+        <abbr title="phone">Phone: </abbr>(0049)176 760 750 37 E-mail:
+        <a href="mailto:m.abakar@bytmasoft.de">Abakar Mahamat</a>
+      </strong>
+    </span>
+  </div>
+</footer>
+
