--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<!-- main app container -->
+<div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">     
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
