--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,4 +1,42 @@
-<div class="container">
+<div class="bg-dark">
+  <div class="container">
+    <div class="card card-login mx-auto mt-5">
+      <div class="card-header">Reset Password</div>
+      <div class="card-body">
+        <div class="text-center mt-4 mb-5">
+          <h4>Forgot your password?</h4>
+          <p>
+            Enter your email address and we will send you instructions on how to
+            reset your password.
+          </p>
+        </div>
+        <form>
+          <div class="form-group">
+            <input
+              class="form-control"
+              id="exampleInputEmail1"
+              type="email"
+              aria-describedby="emailHelp"
+              placeholder="Enter email address"
+            />
+          </div>
+          <a
+            class="btn btn-primary btn-block"
+            href="../login/login.component.html"
+            >Reset Password</a
+          >
+        </form>
+        <div class="text-center">
+            <a class="d-block small" href="/login">Login Page</a>
+            <a class="small text-muted" href="/forgot-password">Forgot password?</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-4">
         <div class="card mt-3">
@@ -24,5 +62,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
