--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,68 +1,28 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      @if (isHandset$ | async) {
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
-      }
-      <span>dss-portal</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
-</mat-sidenav-container>
 
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="bms-container">
       <div class="bms-row" >
         <div class="bms-content-main">      
            <ul class="navbar-nav navbar-dark bg-dark " style="border-radius: 1rem">
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+            
+            <li class="nav-item" *ngIf="!authService.isAuthenticated()">
+              <a routerLink="/login"></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/dashboard">Dashboard</a>
-            </li>
-            <li class="nav-item">
+            
+            <li class="nav-item" *ngIf="authService.isAuthenticated()" >
               <a class="nav-link" routerLink="/students">students</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/dashboard">Dashboard</a>
-            </li>
-            <li class="nav-item">
+       
+            <li class="nav-item" *ngIf="authService.isAuthenticated()">
               <a class="nav-link" routerLink="/about">About</a>
+            </li>
+            <li class="nav-item" *ngIf="authService.isAuthenticated()">
+              <a class="nav-link" (click)="logout()">logout</a>
             </li>
             
           </ul> 
         </div>
-        <div class="bms-content-secondary">              
-               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/logout">Lougout</a>
-                </li>
-              
-
-              </ul> 
-        
-   
-        </div>
-      </div>
- 
+       </div> 
   </div>
-</nav>
-  -->
+</nav> 
