--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div mat-dialog-content>
+  <form>
+    <mat-form-field>
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="firstName">
+    </mat-form-field>
+  </form>
+</div>
 <!-- main app container -->
 <div class="jumbotron">
     <div class="container">
