--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,10 @@
-.example-container 
-  height: 100vh
+.example-container {
+  height: 100vh;
+}
 
-.full-width 
-  width: 100%
+.full-width {
+  width: 100%;
+
+}
 
 
