--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -26,9 +26,11 @@
             >Reset Password</a
           >
         </form>
+
+          
         <div class="text-center">
-            <a class="d-block small" href="/login">Login Page</a>
-            <a class="small text-muted" href="/forgot-password">Forgot password?</a>
+            <a class="d-block" href="/login">Login Page</a>
+           
         </div>
       </div>
     </div>
