--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,11 +1,11 @@
-<section class="vh-30">
+ <section class="vh-30">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-md-block">
-              <img src="assets/images/baraah_2.jpeg"
+              <img title="Student Baraah" src="assets/images/baraah_2.jpeg"
                 alt="login form" class="img-fluid"
                 style="border-radius: 1rem 0 0 1rem"/>
             </div>
@@ -13,10 +13,10 @@
               <div class="card-body p-4 p-lg-5 text-black">              
                
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                    <div class="d-flex align-items-center mb-3 pb-1">
-                   <img src="assets/images/logo/logo.jpeg">
+                    <div class="d-flex align-items-center mb-3 pb-4">
+                   <img title="Logo" src="assets/images/logo/logo.jpeg">
                     </div>
-                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px">
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 2px">
                       Sign into your account
                     </h5>
   
@@ -72,9 +72,9 @@
                         Login
                       </button>
                     </div>
-                    <a class="small text-muted" href="/forgot-password">Forgot password?</a>
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? 
-                      <a href="/register" style="color: #393f81;">Register here</a></p>
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">
+                      <a href="/forgot-password">Forgot password?</a>
+                    </p>
                     <a href="#!" class="small text-muted">Terms of use.</a>
                     <a href="#!" class="small text-muted">Privacy policy</a>
   
@@ -89,45 +89,4 @@
       </div>
     </div>
   </div>
-</section>
-
-<!-- <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-4">
-      <div class="card mt-5">
-        <div class="card-header text-center">
-          Login
-        </div>
-        <div class="card-body">
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <div class="mb-3">
-              <label for="username" class="form-label">username</label>
-              <input type="username" id="username" formControlName="username" class="form-control" [ngClass]="{'is-invalid': username?.touched && username?.invalid}">
-              <div *ngIf="username?.touched && username?.invalid" class="invalid-feedback">
-                <div *ngIf="username?.errors?.['required']">username is required.</div>
-                <div *ngIf="username?.errors?.['username']">Invalid username format.</div>
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" formControlName="password" class="form-control" [ngClass]="{'is-invalid': password?.touched && password?.invalid}">
-              <div *ngIf="password?.touched && password?.invalid" class="invalid-feedback">
-                <div *ngIf="password?.errors?.['required']">Password is required.</div>
-                <div *ngIf="password?.errors?.['minlength']">Password must be at least 6 characters long.</div>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-          </form>
-          <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-            {{ errorMessage }}
-          </div>
-        </div>
-        <div class="card-footer text-center">
-          <a routerLink="/forgot-password">Forgot Password?</a>
-          <br>
-          <a routerLink="/register">Register</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
+</section> 
