--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+// Override Bootstrap variables
+$primary: #0039cb;  // Change primary color
+
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
 html, body {
     height: 100% 
 
