--- a/src/app/pages/students/student-list/student-list.component.html
+++ b/src/app/pages/students/student-list/student-list.component.html
@@ -1,31 +1,38 @@
 <div class="student-list-container">
+  <h2>Student List</h2>
     <mat-toolbar color="primary">
-      <span>Student List</span>
+      <!-- <span>Student List</span> -->
       <span class="spacer"></span>
        <button mat-raised-button color="accent" (click)="openAddStudentModal()">Add Student</button>
     </mat-toolbar>
+    <mat-form-field appearance="fill" class="search-bar">
+      <mat-label>Search Students</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search by firstName or lastName">
+    </mat-form-field>
+
+ 
   
     <!-- Table displaying students -->
-    <mat-table [dataSource]="students" class="mat-elevation-z8">
+    <mat-table [dataSource]="students" matSort class="mat-elevation-z8">
 
      <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header > ID </mat-header-cell>
       <mat-cell *matCellDef="let student"> {{ student.id }} </mat-cell>
     </ng-container>
 
       <ng-container matColumnDef="firstName">
-        <mat-header-cell *matHeaderCellDef> First Name</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> First Name</mat-header-cell>
         <mat-cell *matCellDef="let student"> {{ student.firstName }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="lastName">
-        <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </mat-header-cell>
         <mat-cell *matCellDef="let student"> {{ student.lastName }} </mat-cell>
       </ng-container>
   
       <!-- Column for Matriculation Number -->
       <ng-container matColumnDef="matNumber">
-        <mat-header-cell *matHeaderCellDef> Matriculation No. </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Matriculation No. </mat-header-cell>
         <mat-cell *matCellDef="let student"> {{ student.matNumber }} </mat-cell>
       </ng-container>
   
@@ -33,11 +40,14 @@
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let student">
-          <button mat-icon-button color="primary" (click)="openEditStudentModal(student)">
+          <button mat-icon-button color="primary" (click)="openEditStudentModal(student)"  matTooltip="Edit Student!!">
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button  color="warn" (click)="confirmDeleteStudent(student.id)" matTooltip="Delete Student!!">
             <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button  (click)="viewStudentDetails(student.id)" matTooltip="View Student">
+            <mat-icon>pageview</mat-icon>
           </button>
         </mat-cell>
       </ng-container>
@@ -48,7 +58,6 @@
     </mat-table>
   
     <!-- Pagination (optional) -->
-    <mat-paginator [length]="totalStudents" [pageSize]="10" (page)="onPageChange($event)">
-    </mat-paginator>
+   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
   
