--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -1,4 +1,22 @@
-<div class="bg-dark">
+<!--
+<div class="forgot-password-container">
+  <mat-card>
+    <mat-card-title>Forgot Password</mat-card-title>
+    <mat-card-content>
+      <form>
+        <mat-form-field appearance="fill">
+          <mat-label>Email</mat-label>
+          <input placeholder="Enter your email" matInput type="email" required>
+        </mat-form-field>
+
+        <button mat-raised-button color="primary">Reset Password</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div> -->
+
+
+ <div class="bg-dark">
   <div class="container">
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Reset Password</div>
@@ -35,10 +53,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> 
 
-
-<!-- <div class="container">
+<!--
+ <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-4">
         <div class="card mt-3">
@@ -64,5 +82,4 @@
         </div>
       </div>
     </div>
-  </div> -->
-  
+  </div>  -->
