--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,33 @@
-<!-- main app container -->
+<div class="app-container">
+  <div *ngIf="authService.isAuthenticated(); else loginPage">
+    <bms-header></bms-header>
+    <main class="main-content">
+      <router-outlet></router-outlet>
+    </main>
+    <bms-footer></bms-footer>
+  </div>
+
+  <!-- Login Page -->
+  <ng-template #loginPage>
+    <main class="login-page">
+      <router-outlet></router-outlet>
+    </main>
+  </ng-template>
+</div>
+
+
+<!-- main app container
 <div class="jumbotron">
     <div class="container">
       <div class="row">
-        <div class="col-12">     
+        <div class="col-12" *ngIf="authService.isAuthenticated(); else loginPage">    
+          <bms-header></bms-header>           
           <router-outlet></router-outlet>
+          <bms-footer></bms-footer>
         </div>
+        <ng-template #loginPage>
+          <router-outlet></router-outlet>
+        </ng-template>
       </div>
     </div>
-  </div>
+  </div> -->
