--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -80,6 +80,6 @@
 
   <mat-sidenav-content>
     <!-- Main content goes here -->
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
