--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 @import "bootstrap/scss/bootstrap.scss";
-// @import "@angular/material/prebuilt-themes/indigo-pink.css";
+//@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @include mat.core();
 
 $myapp-theme-primary: mat.m2-define-palette(mat.$m2-indigo-palette, A200, A100, A400);
@@ -38,4 +38,9 @@ body {
 .mat-raised-button {
   font-size: 16px;
 }
+
+.mat-form-field {
+  appearance: outline !important;
+}
+
 
