--- a/src/app/pages/students/student-registration-form/student-registration-form.component.html
+++ b/src/app/pages/students/student-registration-form/student-registration-form.component.html
@@ -76,11 +76,71 @@
   
   </div>
 
- 
+<h3>Guardian Information</h3>
+<div formArrayName="guardians">
+  <div *ngFor="let guardian of guardians.controls; let i = index" [formGroupName]="i">
+    <mat-form-field appearance="outline" >
+      <mat-label>First Name</mat-label>
+      <input matInput placeholder="Enter first name" formControlName="firstName">
+      <mat-error *ngIf="hasError('guardian', 'firstName', 'required')">First name is required</mat-error>
+      <mat-error *ngIf="hasError('guardian', 'firstName', 'minlength')">First name must be at least 2 characters long</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" >
+      <mat-label>Last Name</mat-label>
+      <input matInput placeholder="Enter last name" formControlName="lastName">
+      <mat-error *ngIf="hasError('guardian', 'lastName', 'required')">Last name is required</mat-error>
+      <mat-error *ngIf="hasError('guardian', 'lastName', 'minlength')">Last name must be at least 2 characters long</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" >
+      <mat-label>Country</mat-label>
+      <input matInput placeholder="Enter Country" formControlName="country">
+      <mat-error *ngIf="hasError('guardian', 'country', 'required')">Country is required</mat-error>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline" >
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Enter Email" formControlName="email">
+      <mat-error *ngIf="hasError('guardian', 'email', 'required')">Email is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" >
+      <mat-label>Mobile</mat-label>
+      <input matInput placeholder="Enter Mobile" formControlName="mobile">
+      <mat-error *ngIf="hasError('guardian', 'mobile', 'required')">Mobile is required</mat-error>
+    </mat-form-field>
+    
+    <mat-form-field appearance="outline" >
+      <mat-label>Phone</mat-label>
+      <input matInput placeholder="Enter Phone" formControlName="phone">
+      <mat-error *ngIf="hasError('guardian', 'phone', 'required')">Phone is required</mat-error>
+    </mat-form-field>
 
 
-  <h3>Guardian Information</h3>
-  <div class="form-group" formGroupName="guardian">
+    <mat-form-field appearance="outline">
+      <mat-label>Gender</mat-label>
+      <mat-select formControlName="gender">
+        <mat-option *ngFor="let gender of genders" [value]="gender">{{ gender }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Relationship</mat-label>
+      <mat-select formControlName="relationship">
+        <mat-option *ngFor="let relationship of relationships" [value]="relationship">
+          {{ relationship }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <button mat-raised-button color="warn" (click)="removeGuardian(i)">Remove Guardian</button>
+  </div>
+</div>
+
+<button mat-raised-button color="primary" (click)="addGuardian()">Add Guardian</button>
+
+  <!-- <div class="form-group" formGroupName="guardian">
     <mat-form-field appearance="outline" >
       <mat-label>First Name</mat-label>
       <input matInput placeholder="Enter first name" formControlName="firstName">
@@ -132,7 +192,7 @@
     <mat-error *ngIf="hasError('guardian', 'relation', 'required')">Please select a relation</mat-error>
   
 
-  </div>
+  </div> -->
 
   
 
